[gd_scene load_steps=6 format=3 uid="uid://dhcsxdylpaexb"]

[ext_resource type="Script" path="res://Scripts/Game/NuisancePuyo.gd" id="1_820i2"]
[ext_resource type="Texture2D" uid="uid://b1lgs81wy67hp" path="res://Assets/Sprites/puyo_aqua_spritesheet.png" id="1_hy5h8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3fek1"]
atlas = ExtResource("1_hy5h8")
region = Rect2(1293, 68, 71, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_es3bu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fek1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyw6y"]
size = Vector2(51, 46)

[node name="NuisancePuyo" type="Area2D"]
script = ExtResource("1_820i2")

[node name="PuyoSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_es3bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_yyw6y")

[node name="RayBottom" type="RayCast2D" parent="."]
collision_mask = 3
collide_with_areas = true

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="PoppedPreTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PoppedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GravityTimer" to="." method="_on_gravity_timer_timeout"]
[connection signal="timeout" from="PoppedPreTimer" to="." method="_on_pre_popped_timer_timeout"]
[connection signal="timeout" from="PoppedTimer" to="." method="_on_popped_timer_timeout"]
